Update meta tags in index.html for presskit

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MC Roger - Presskit 2026 | Bruxo</title>
-    <meta name="description" content="Presskit oficial do MC Roger (Bruxo) - +600 milhões de reproduções. Hits como Tudo no Sigilo, Sem Sentimento e Trilogia 150. Contrate agora!" />
+    <meta name="description" content="Presskit oficial do MC Roger (Bruxo) - +600 milhões de reproduções. Hits como Tudo no Sigilo, Sem Sentimento, Bandida, Porque se foi irmão e Trilogia 150 e +10. Contrate agora!" />
     <meta name="keywords" content="MC Roger, Bruxo, funk, presskit, contrato, shows, eventos" />
     <meta name="author" content="MC Roger" />
 
     <meta property="og:title" content="MC Roger - Presskit 2026 | Bruxo" />
     <meta property="og:description" content="Presskit oficial do MC Roger - +600 milhões de reproduções nas plataformas digitais." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRV6rBr8kqPPn1Ozi1v2L6-vZF2xBPNw_kIAtZIii7xMA&s=10" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@mcroger" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@mcrogerobruxo" />
+    <meta name="twitter:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRV6rBr8kqPPn1Ozi1v2L6-vZF2xBPNw_kIAtZIii7xMA&s=10" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous" />
